@@ -1,3 +1,9 @@
+20050706
+ - (djm) OpenBSD CVS Sync
+   - markus@cvs.openbsd.org 2005/07/01 13:19:47
+     [channels.c]
+     don't free() if getaddrinfo() fails; report mpech@
+
 20050626
  - (djm) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2005/06/17 22:53:47
